; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/cio/extr_device_ops.c_ccw_device_stlck_done.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/cio/extr_device_ops.c_ccw_device_stlck_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ccw_device = type { i32 }
%struct.stlck_data = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ccw_device_stlck_done(%struct.ccw_device* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.ccw_device*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.stlck_data*, align 8
  store %struct.ccw_device* %0, %struct.ccw_device** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.stlck_data*
  store %struct.stlck_data* %9, %struct.stlck_data** %7, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.stlck_data*, %struct.stlck_data** %7, align 8
  %12 = getelementptr inbounds %struct.stlck_data, %struct.stlck_data* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load %struct.stlck_data*, %struct.stlck_data** %7, align 8
  %14 = getelementptr inbounds %struct.stlck_data, %struct.stlck_data* %13, i32 0, i32 1
  %15 = call i32 @complete(i32* %14)
  ret void
}

declare dso_local i32 @complete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
